# tree-sitter-holyc

./: CMakeLists.txt  Cargo.toml  Makefile  binding.gyp  build.zig  build.zig.zon  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  test.hc  test2.hc  tree-sitter.json
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_holyc/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/zig/: root.zig  test.zig
src/: grammar.json  node-types.json  parser.c
