[package]
name = "tree-sitter-holyc"
description = "Tree-sitter grammar for the HolyC programming language (from TempleOS, made by Terry A. Davis)"
version = "0.1.0"
authors = ["Epicwoman212"]
license = "AGPL"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "holyc"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/snowman-scott/tree-sitter-holyc.git"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.10"
