[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-holyc"
description = "Tree-sitter grammar for the HolyC programming language (from TempleOS, made by Terry A. Davis)"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "holyc"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Epicwoman212" }]
requires-python = ">=3.10"
license.text = "AGPL"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/snowman-scott/tree-sitter-holyc.git"
Funding = ""

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
